<resources>
    <string name="app_name">OpenJisho</string>
    <string name="building_db">Building database…</string>
    <string name="something_wrong">Oops! Something went wrong.</string>
    <string name="retry">Retry</string>
    <string name="search_hint">Japanese words</string>
    <string name="downloading_dict">Downloading dictionary file…</string>
    <string name="populating_db">Populating Database…</string>
    <string name="kanji_header">Kanji</string>
    <string name="reading_header">Reading</string>
    <string name="sense_header">Definition</string>
    <string name="sense_header_plural">Definitions</string>
    <string name="entry">Entry</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="lookup_words">Lookup words</string>
    <string name="not_valid_query">\"%1$s\" is not a valid query</string>
    <string name="not_found">No results found for \"%1$s\"</string>
    <string name="tip">TIP: </string>
    <string name="tip_start">try using </string>
    <string name="tip_end"> for more results.</string>
    <string name="words">Words</string>
    <string name="sentences">Sentences</string>
    <string name="forms_header">Other forms</string>
    <string name="grade_label">Grade:</string>
    <string name="strokes_label">Strokes:</string>
    <string name="kun_label">Kun:</string>
    <string name="on_label">On:</string>
    <string name="not_enough_available_space">No enough available space. You need at least 400 MB of available space to download dictionary files.</string>
    <string name="setup_progress">Setup Progress</string>
    <string name="setup_channel_desc">Shows the progress of the setup task to the user</string>
    <string name="running_setup">Running setup</string>
    <string name="search_widget">search widget</string>
    <string name="reset">Reset</string>
    <string name="rebuild_db">Rebuild DB</string>
    <string name="rebuild_database">Rebuild database</string>
    <string name="are_you_sure_rebuild">Are you sure you want to re-download all dictionary files and rebuild the database? This operation may take several minutes and use a significant amount of bandwidth.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="help">Help</string>
    <string name="welcome_body_text">To begin, it is necessary to download dictionary files and build the database. Please notice that this might take several minutes and use a significant amount of bandwidth.</string>
    <string name="start_download">Start download</string>
    <string name="establishing_connection">Establishing connection with server…</string>
    <string name="dict_welcome_entries">Search dictionary entries.\n Input any Japanese or English text to begin.</string>
    <string name="dict_welcome_sentences">Search example sentences translated to English.\n Input any Japanese or English text to begin.</string>
    <string name="picker_welcome_entries">Add dictionary entries to your list.\n Input any Japanese or English text to begin.</string>
    <string name="picker_welcome_sentences">Add example sentences to your list.\n Input any Japanese or English text to begin.</string>
    <string name="welcome_to_openjisho">Welcome to OpenJisho!</string>
    <string name="lookup_sentences">Lookup sentences</string>
    <string name="about_app_text_body"><![CDATA[<p>OpenJisho is free and open source software. It is licensed under the GNU Public License (GPL) version 3. You can view the license here <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">https://www.gnu.org/licenses/gpl-3.0.en.html</a>.</p><p>This program uses the <a href="http://www.edrdg.org/wiki/index.php/JMdict-EDICT_Dictionary_Project">JMdict/EDICT</a>, <a href="http://nihongo.monash.edu/kradinf.html">RADKFILE </a>and <a href="http://www.edrdg.org/wiki/index.php/KANJIDIC_Project">KANJIDIC </a> dictionary files. These files are the property of the <a href="http://www.edrdg.org/"> Electronic Dictionary Research and Development Group</a>, and are used in conformance with the Group\'s <a href="http://www.edrdg.org/edrdg/licence.html">licence</a>.</p><p>Example sentences are provided by <a href="https://tatoeba.org">Tatoeba</a> under the Creative Commons Attribution 2.0 France license.</p><p>Illustrations provided by Ambar Troya, all rights reserved. The illustrations cannot be reproduced in any form, without permission. <a href="https://www.artstation.com/ambartroya">LEARN MORE</a>.</p>]]></string>
    <string name="by_author">by Gabriel Aumala</string>
    <string name="view_on_github">View on GitHub</string>
    <string name="loading_jmdict">Loading JMdict…</string>
    <string name="loading_radkfile">Loading RADKFILE…</string>
    <string name="loading_kanjidic">Loading KANJIDIC…</string>
    <string name="storing_jmdict_entries">Storing JMdict entries…</string>
    <string name="storing_kanjidic_entries">Storing KANJIDIC entries…</string>
    <string name="inserting_radicals">Inserting RADKFILE entries…</string>
    <string name="clearing_radicals_table">Clearing existing RADKFILE data…</string>
    <string name="clearing_jmdict_table">Clearing JMdict table…</string>
    <string name="clearing_kanjidic_table">Clearing KANJIDIC table…</string>
    <string name="clearing_sentences_table">Clearing Tatoeba sentence data…</string>
    <string name="clearing_translations_table">Clearing Tatoeba translation data…</string>
    <string name="downloading_tatoeba_sentences">Downloading Tatoeba sentences file…</string>
    <string name="downloading_tatoeba_translations">Downloading Tatoeba translations file…</string>
    <string name="downloading_tatoeba_links">Downloading Tatoeba indices file…</string>
    <string name="storing_tatoeba_sentences">Storing Tatoeba sentences…</string>
    <string name="looking_up_tatoeba_translations">Looking up Tatoeba translations…</string>
    <string name="storing_tatoeba_translations">Storing Tatoeba translations…</string>
    <string name="clearing_indices_table">Clearing Tatoeba indices data…</string>
    <string name="storing_tatoeba_indices">Storing Tatoeba Japanese indices…</string>
    <string name="decompressing_tatoeba_sentences">Decompressing Tatoeba sentences file…</string>
    <string name="decompressing_tatoeba_translations">Decompressing Tatoeba translations file…</string>
    <string name="decompressing_tatoeba_links">Decompressing Tatoeba indices file…</string>
    <string name="wrapping_up">Wrapping up…</string>
    <string name="martial_arts_tag">Martial arts</string>
    <string name="x_rated_tag">X-rated</string>
    <string name="abbreviation_tag">Abbreviation</string>
    <string name="adjective_i_tag">Adjective -i</string>
    <string name="adjective_ix_tag">Adjective -i (yoi/ii)</string>
    <string name="adjective_na_tag">adjective -na</string>
    <string name="adjective_pre_noun_tag">Pre-noun adjectival</string>
    <string name="taru_adjective_tag">Taru\' adjective</string>
    <string name="adjective_no_tag">Adjective -no</string>
    <string name="adjective_f_tag">Noun/verb acting prenominally</string>
    <string name="adverb_tag">Adverb</string>
    <string name="adverb_to_tag">Adverb -to</string>
    <string name="archaism_tag">Archaism</string>
    <string name="auxiliary_tag">Auxiliary</string>
    <string name="ateji_tag">Ateji</string>
    <string name="aux_verb_tag">Auxiliary verb</string>
    <string name="aux_adjective_tag">Auxiliary adjective</string>
    <string name="buddhist_tag">Buddhist term</string>
    <string name="chemistry_tag">Chemistry term</string>
    <string name="children_tag">Children\'s language</string>
    <string name="colloquialism_tag">Colloquialism</string>
    <string name="computer_tag">Computer terminology</string>
    <string name="conjuction_tag">Conjuction</string>
    <string name="copula_tag">Copula</string>
    <string name="counter_tag">Counter</string>
    <string name="derogatory_tag">Derogatory</string>
    <string name="exclusive_kanji_tag">Exclusively kanji</string>
    <string name="exclusive_kana_tag">Exclusively Kana</string>
    <string name="expressions_tag">Expressions</string>
    <string name="familiar_tag">Familiar language</string>
    <string name="female_tag">Female language</string>
    <string name="food_tag">Food term</string>
    <string name="geometry_tag">Geometry term</string>
    <string name="gikun_tag">Gikun</string>
    <string name="honorific_tag">Honorific (sonkeigo)</string>
    <string name="humble_tag">Humble (kenjougo)</string>
    <string name="irreg_kanji_tag">Irregular kanji usage</string>
    <string name="idiomatic_tag">Idiomatic expression</string>
    <string name="irreg_kana_tag">Irregular kana usage</string>
    <string name="interjection_tag">Interjection</string>
    <string name="irreg_okurigana_tag">Irregular Okurigana usage</string>
    <string name="irreg_verb_tag">Irregular verb</string>
    <string name="longuistics_tag">Linguistics terminology</string>
    <string name="male_slang_tag">Manga slang</string>
    <string name="male_tag">Male language</string>
    <string name="math_tag">Mathematics</string>
    <string name="military_tag">Military</string>
    <string name="noun_tag">Noun</string>
    <string name="noun_adverb_tag">Adverbial noun</string>
    <string name="noun_suffix_tag">Noun suffix</string>
    <string name="noun_prefix_tag">Noun prefix</string>
    <string name="noun_temp_tag">Noun (temporal)</string>
    <string name="numeric_tag">Numeric</string>
    <string name="outdated_kanji_tag">Out-dated kanji</string>
    <string name="obsolete_tag">Obsolete term</string>
    <string name="obscure_tag">Obscure term</string>
    <string name="obsolete_kana_tag">Obsolete kana</string>
    <string name="old_irreg_kana_tag">Old or irregular Kana</string>
    <string name="onomatopeia_tag">Onomatopeic word</string>
    <string name="pronoun_tag">Pronoun</string>
    <string name="poetical_tag">Poetical term</string>
    <string name="polite_tag">Polite (teineigo)</string>
    <string name="prefix_tag">Prefix</string>
    <string name="proverb_tag">Proverb</string>
    <string name="particle_tag">Particle</string>
    <string name="physics_tag">Physics terminology</string>
    <string name="quote_tag">Quotation</string>
    <string name="rare_tag">Rare</string>
    <string name="sensitive_tag">Sensitive</string>
    <string name="slang_tag">Slang</string>
    <string name="suffix_tag">Suffix</string>
    <string name="usually_kanji_tag">Usually kanji only</string>
    <string name="usually_kana_tag">Usually kana only</string>
    <string name="unclassified_tag">Unclassified</string>
    <string name="yojikugo_tag">Yojijukugo</string>
    <string name="verb1_tag">Ichidan verb</string>
    <string name="verb1_kureru_tag">Ichidan verb (kureru)</string>
    <string name="verb2_u_tag">Nidan verb -u</string>
    <string name="verb4_fu_tag">Yodan verb -fu</string>
    <string name="submit">Submit</string>
    <string name="new_list">New list</string>
    <string name="list_name">List name</string>
    <string name="create_new_list">Create new list</string>
    <string name="entries">Entries</string>
    <string name="dict_welcome_radicals">Search kanji by radicals.\nChoose any radicals below to list the kanji that contains all of them.</string>
    <string name="open_source_libraries">Open source libraries:</string>
    <string name="input_sentence">Input sentence</string>
    <string name="please_input_sentence"><![CDATA[Please input a sentence using spaces (\' \') to separate words to lookup in the dictionary.<br/>We also support <a href="http://edrdg.org/wiki/index.php/Sentence-Dictionary_Linking">Tatoeba indices</a> to make it easier to lookup the correct words.]]></string>
    <string name="sentence">Sentence</string>
</resources>