<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:elevation="4dp"
        app:title="@string/new_list"
        android:layout_width="match_parent"
        style="?toolbarStyle"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        app:layout_constraintTop_toBottomOf="@id/toolbar">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit_text"
            android:hint="@string/list_name"
            android:background="?colorSurface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_list"
        android:textColor="?colorSurface"
        app:icon="@drawable/ic_add_white_24dp"
        app:iconTint="?colorSurface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>