<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="4dp" />

    <ImageView
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:padding="16dp"
        android:layout_gravity="start"
        android:id="@+id/input_icon"
        android:src="@drawable/baseline_edit_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:elevation="4dp" />

    <ImageView
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:padding="16dp"
        android:layout_gravity="end"
        android:id="@+id/close_btn"
        android:src="@drawable/ic_clear_black_24dp"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:foreground="?attr/selectableItemBackground" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:text="@string/input_sentence"
        android:gravity="center_vertical"
        android:elevation="4dp"
        android:id="@+id/title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/input_icon"
        style="@style/TextAppearance.AppCompat.Title"/>

    <TextView
        android:id="@+id/text_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:textAppearance="?textAppearanceBody2"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:text="@string/please_input_sentence" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sentence"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_body"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:inputType="text|textMultiLine"
            android:imeOptions="actionDone"
            android:scrollHorizontally="false"
            android:gravity="top" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:theme="@style/Theme.MyApp"
        android:text="@string/submit"
        app:layout_constraintTop_toBottomOf="@id/text_field"/>

</androidx.constraintlayout.widget.ConstraintLayout>